--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </script>
 
 <!--  <base href="/http://chunavguide.com/">-->
-  <base href="/http://chunavguide.com/">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
